# kp

./: .gitignore  pyproject.toml
src/kp/: __init__.py
vps/: .env.example  config.yml  pyproject.toml
vps/assets/jsons/: default-scenario.json
vps/assets/prompts/: scenario-creation.md  scenario-editing.md
vps/src/vps/: __init__.py  app.py
vps/src/vps/llm/: runner.py
vps/src/vps/loader/: loader.py
vps/src/vps/routers/: __init__.py  routers.py
vps/src/vps/services/: __init__.py  _services.py  services.py
